--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
+    <title>Model Animation (Hsu Win Lat)</title>
+    <meta name="title" content="Model Animation (Hsu Win Lat)">
+    <meta name="description" content="A 3D website with model animation and you can change dance with buttons ">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mat-nine.vercel.app/">
+    <meta property="og:title" content="Model Animation (Hsu Win Lat)">
+    <meta property="og:description" content="A 3D website with model animation and you can change dance with buttons ">
+    <meta property="og:image"
+        content="/pp.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mat-nine.vercel.app/">
+    <meta property="twitter:title" content="Model Animation (Hsu Win Lat)">
+    <meta property="twitter:description"
+        content="A 3D website with model animation and you can change dance with buttons ">
+    <meta property="twitter:image"
+        content="/pp.png">
     <link rel="icon" type="image/x-icon" href="/fav2.png">
     <title>Hsu Win Lat</title>
 </head>
+
 <body>
     <div id="root"></div>
-    <script type="module" src="./index.jsx"></script></body>
+    <script type="module" src="./index.jsx"></script>
+</body>
+
 </html>
