--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,14 @@
 <body>
     <div id="root"></div>
     <script type="module" src="./index.jsx"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVTRGYTCKC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HVTRGYTCKC');
+</script>
 </body>
 
 </html>
